changing spinner display mode to dialog changing range of spinner to 1-10+

--- a/app/src/main/res/layout/quantity_editor.xml
+++ b/app/src/main/res/layout/quantity_editor.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:spinnerMode="dialog"
         />
     <com.staples.mobile.cfa.widget.EditTextWithImeBackEvent
         android:id="@+id/cartitem_qty_edittext"
