--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.staples.mobile.cfa.widget.DataWrapper xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"changin
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -201,7 +202,7 @@
             android:layout_gravity="center_vertical"
             android:visibility="gone"
             android:textSize="18sp"
-            maxSpinnerValue="6"/>
+            app:maxSpinnerValue="9"/>
         <Button
             android:id="@+id/add_to_cart"
             android:layout_width="160dp"
