--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/profile_fragment">
+    <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
+        android:id="@+id/profile_fragment_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -66,4 +79,19 @@
             android:layout_height="wrap_content"
             android:id="@+id/addCCBtn"/>
     </LinearLayout>
-</LinearLayout>
+    </LinearLayout>
+    </com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay>
+    <RelativeLayout
+        android:id="@+id/profile_progress_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:clickable="false"
+        android:background="#6f000022" >
+        <ProgressBar
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateOnly="true" />
+    </RelativeLayout>
+</FrameLayout>
