--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="6dp">
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_weight="1"
-        android:padding="6dp"
-        android:textSize="18dp"/>
-    <TextView
-        android:id="@+id/distance"
+        android:paddingRight="6dp">
+        <TextView
+            android:id="@+id/city"
+            style="@style/StoreItem"/>
+        <TextView
+            android:id="@+id/street"
+            style="@style/StoreItem"/>
+        <TextView
+            android:id="@+id/phone"
+            style="@style/StoreItem"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:textSize="18dp"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/distance"
+            style="@style/StoreItem"
+            android:layout_gravity="right"/>
+        <TextView
+            android:id="@+id/opentime"
+            style="@style/StoreItem"
+        android:layout_gravity="right"/>
+    </LinearLayout>
 </LinearLayout>
