--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,6 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="TopperStyle">
-        <item name="android:textSize">16sp</item>
-    </style>
-
     <style name="CartHeader" parent="DrawerStyle">
         <item name="android:background">#ffff00</item>
     </style>
@@ -144,4 +140,12 @@
         <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <!-- Store locator styling -->
+    <style name="StoreItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
