--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -10,6 +10,7 @@
         android:id="@+id/cart_layout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:animateLayoutChanges="true"
         android:orientation="vertical">
         <TextView
             android:id="@+id/cart_title"
