--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -78,12 +78,15 @@
                 <!--/>-->
             <Button
                 android:id="@+id/cartitem_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="30dp"
+                android:layout_width="80dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center_vertical"
-                android:text="@string/delete"
+                android:text="@string/remove"
                 android:textSize="14dp"
-                android:padding="0dp"
+                android:paddingTop="0dp"
+                android:paddingBottom="0dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 />
         </LinearLayout>
     </LinearLayout>
