add clearance and daily deal in feed layout

--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -7,6 +7,68 @@
     android:focusableInTouchMode="true"
     android:padding="10dp">
 
+    <!-- Clearance Products in Cart -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#ffffff">
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/clearance_title"
+            android:layout_gravity="left|center_vertical"
+            android:padding="10dp"
+            android:text="The item(s) in your cart on clearance"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"/>
+
+        <ListView
+            android:id="@+id/clearance_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"/>
+
+    <!-- Daily Deal Products in Cart -->
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="#ffffff">
+
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/dailt_deal_title"
+            android:layout_gravity="left|center_vertical"
+            android:padding="10dp"
+            android:text="The item(s) in your cart on Daily Deal"/>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:background="#c0c0c0"/>
+
+        <ListView
+            android:id="@+id/daily_deal_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"/>
+    </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="5dp"/>
+
     <!-- Last Seen Products -->
     <LinearLayout
         android:layout_width="fill_parent"
