--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -25,6 +25,20 @@
               android:orientation="horizontal"
               android:animateLayoutChanges="true"
               android:background="@color/staples_light">
+            <!-- close button (only visible when checkout displayed)-->
+            <TextView
+                android:id="@+id/close_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:gravity="center_vertical|left"
+                android:textSize="24sp"
+                android:fontFamily="sans-serif"
+                android:text="x"
+                android:clickable="true"
+                android:onClick="closeBtnClick"
+                android:visibility="gone"/>
             <ImageView
                 android:id="@+id/action_left_drawer"
                 android:layout_width="48dp"
