--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -11,11 +11,24 @@
     android:padding="6dp"
     android:background="#ffffff">
 
-<TextView
-    android:id="@+id/cartitem_shipping_estimate"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textSize="12sp"/>
+    <!--shipping estimate info-->
+    <FrameLayout
+        android:id="@+id/cartitem_shipping_estimate_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/cartitem_shipping_estimate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:textSize="12sp"/>
+        <TextView
+            android:id="@+id/cartitem_shipping_estimate_itemqty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:textSize="12sp"/>
+    </FrameLayout>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
