--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -96,15 +96,14 @@
                 android:layout_marginRight="6dp"
                 android:textSize="20sp"
                 android:visibility="gone"/>
-            <!--sign-in button (only visible when guest checkout displayed)-->
+            <!--checkout sign-in button (only visible when guest checkout displayed)-->
             <Button
-                android:id="@+id/signin_button"
+                android:id="@+id/co_signin_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/signin_title"
                 android:visibility="gone"
-                android:layout_marginRight="10dp"
-                android:onClick="signInBtnClick"/>
+                android:layout_marginRight="10dp"/>
             <!-- Cart icon with badge -->
             <com.staples.mobile.cfa.widget.BadgeImageView
                 android:id="@+id/action_show_cart"
