--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -43,7 +43,7 @@
                 android:id="@+id/action_left_drawer"
                 android:layout_width="48dp"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="center_vertical|left"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:src="@drawable/ic_drawer"/>
@@ -51,10 +51,9 @@
                 android:id="@+id/action_home"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="center_vertical|left"
                 android:layout_marginRight="6dp"
                 android:src="@drawable/logo"/>
-            <!-- Search Bar -->
             <TextView
                 android:id="@+id/header"
                 android:layout_width="0dp"
@@ -62,9 +61,10 @@
                 android:layout_weight="1"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|left"
                 android:textSize="24sp"
                 android:text="@string/staples"/>
+            <!-- Search Bar -->
             <com.staples.mobile.cfa.search.SearchBarView
                 android:id="@+id/search_text"
                 android:layout_width="0dp"
@@ -72,7 +72,7 @@
                 android:paddingRight="4dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_gravity="center_vertical"
+                android:layout_gravity="center_vertical|right"
                 android:visibility="gone"
                 android:inputType="textAutoComplete|textAutoCorrect"
                 android:imeOptions="actionSearch|flagNoExtractUi"
@@ -83,6 +83,7 @@
                 android:id="@+id/search_icon"
                 android:layout_width="@dimen/icon_width"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical|right"
                 android:src="@drawable/ic_search"/>
             <!--cart item qty (only visible when cart displayed)-->
             <TextView
@@ -101,6 +102,7 @@
                 android:id="@+id/co_signin_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center_vertical|right"
                 android:text="@string/signin_title"
                 android:visibility="gone"
                 android:layout_marginRight="10dp"/>
