--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -10,78 +10,96 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#ffffff"
             android:orientation="vertical">
 
             <!-- Clearance Products in Cart -->
-            <TextView
-                android:id="@+id/clearance_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:padding="10dp"
-                android:text="The item(s) in your cart on clearance"/>
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:background="#c0c0c0"/>
             <LinearLayout
-                android:id="@+id/clearance_container"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:background="#ffffff"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/clearance_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:padding="10dp"
+                    android:text="The item(s) in your cart on clearance"/>
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#c0c0c0"/>
+                <LinearLayout
+                    android:id="@+id/clearance_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp"/>
+            </LinearLayout>
 
             <!-- Separator -->
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="5dp"/>
+                android:layout_height="10dp"/>
 
-            <!-- Daily Deal Products in Cart -->
-            <TextView
-                android:id="@+id/daily_deal_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:padding="10dp"
-                android:text="The item(s) in your cart on Daily Deal"/>
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:background="#c0c0c0"/>
             <LinearLayout
-                android:id="@+id/daily_deal_container"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:background="#ffffff"
+                android:orientation="vertical">
+                <!-- Daily Deal Products in Cart -->
+                <TextView
+                    android:id="@+id/daily_deal_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:padding="10dp"
+                    android:text="The item(s) in your cart on Daily Deal"/>
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#c0c0c0"/>
+                <LinearLayout
+                    android:id="@+id/daily_deal_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp"/>
+            </LinearLayout>
 
             <!-- Separator -->
             <View
                 android:layout_width="fill_parent"
-                android:layout_height="5dp"/>
+                android:layout_height="10dp"/>
 
             <!-- Last Seen Products -->
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center_vertical"
-                android:padding="10dp"
-                android:text="The item(s) you looked before"/>
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="2dp"
-                android:background="#c0c0c0"/>
-
             <LinearLayout
-                android:id="@+id/seen_products_container"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:background="#ffffff"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left|center_vertical"
+                    android:padding="10dp"
+                    android:text="The item(s) you looked before"/>
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:background="#c0c0c0"/>
+                <LinearLayout
+                    android:id="@+id/seen_products_container"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </com.staples.mobile.cfa.widget.DataWrapper>
