--- a/app/src/main/res/layout/tobedone.xml
+++ b/app/src/main/res/layout/tobedone.xml
@@ -2,7 +2,8 @@
 <com.staples.mobile.cfa.widget.AnimatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="6dp">
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
