--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -151,6 +151,7 @@
     <style name="HackEditorStyle">
         <item name="android:inputType">number</item>
         <item name="android:imeOptions">actionDone</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColorHint">#000000</item>
         <item name="android:textSize">18sp</item>
     </style>
