Fix reviews, clean HTML on titles

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -70,6 +70,8 @@
                 android:visibility="gone"
                 android:inputType="textAutoComplete|textAutoCorrect"
                 android:imeOptions="actionSearch|flagNoExtractUi"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:singleLine="true"
                 android:hint="@string/original_hint"
                 android:textSize="16sp"/>
