refactoring checkout, allowing credit cards to be selected from profile list

--- a/app/src/main/res/layout/checkout_registered_entry.xml
+++ b/app/src/main/res/layout/checkout_registered_entry.xml
@@ -28,7 +28,7 @@
                 style="@style/CheckoutText"/>
         </LinearLayout>
         <ImageView
-            android:id="@+id/shipping_addr_add"
+            android:id="@+id/shipping_addresses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
@@ -55,7 +55,7 @@
                 style="@style/CheckoutText"/>
         </LinearLayout>
         <ImageView
-            android:id="@+id/payment_method_add"
+            android:id="@+id/payment_methods"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
@@ -82,7 +82,7 @@
                 style="@style/CheckoutText"/>
         </LinearLayout>
         <ImageView
-            android:id="@+id/billing_addr_add"
+            android:id="@+id/billing_addresses"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
