--- a/app/src/main/res/layout/hack_item.xml
+++ b/app/src/main/res/layout/hack_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:paddingLeft="6sp"
-    android:paddingRight="6sp"
+    android:drawableBottom="@drawable/hack_divider"
     android:singleLine="true"
     android:textSize="24sp">
 </TextView>
