--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -3,12 +3,12 @@
   ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
   -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <com.staples.mobile.cfa.widget.LinearLayoutWithProgressOverlay
         android:id="@+id/cart_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         android:orientation="vertical"
@@ -18,6 +18,17 @@
             android:layout_width="match_parent"
             style="@style/CartHeader"
             android:textColor="#ffffff"
+            />
+        <TextView
+            android:id="@+id/empty_cart_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:paddingTop="40dp"
+            android:textSize="20dp"
+            android:text="@string/empty_cart_msg"
+            android:visibility="gone"
             />
         <ListView
             android:id="@+id/cart_list"
