Fine-tune alternative QuantityEditor

--- a/app/src/main/res/layout/hack_item.xml
+++ b/app/src/main/res/layout/hack_item.xml
@@ -2,8 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="1dp"
     android:gravity="center"
-    android:drawableBottom="@drawable/hack_divider"
+    android:background="#ffffffff"
     android:maxLines="1"
-    android:textSize="24sp">
+    android:textSize="20sp">
 </TextView>
