--- a/app/src/main/res/layout/hack_layout.xml
+++ b/app/src/main/res/layout/hack_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/strip"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_gravity="center"/>
+    android:layout_gravity="center"
+    android:padding="1dp"
+    android:background="#ffcccccc"/>
